syntax = "proto3";

package location;

option go_package = "github.com/your-repo/warehouse-management-system/location-service/api/proto";

service LocationService {
  rpc GetShelfLayout(GetShelfLayoutRequest) returns (GetShelfLayoutResponse);
  rpc FindOptimalPath(FindOptimalPathRequest) returns (FindOptimalPathResponse);
  rpc AllocateSlot(AllocateSlotRequest) returns (AllocateSlotResponse);
}

message Shelf {
  string id = 1;
  string name = 2;
  string zone = 3;
  int32 rows = 4;
  int32 columns = 5;
  int32 levels = 6;
  repeated Slot slots = 7;
}

message Slot {
  string id = 1;
  string shelf_id = 2;
  int32 row = 3;
  int32 column = 4;
  int32 level = 5;
  string status = 6;
  string material_id = 7;
}

message GetShelfLayoutRequest {
  string shelf_id = 1;
}

message GetShelfLayoutResponse {
  Shelf shelf = 1;
}

message FindOptimalPathRequest {
  string start_slot_id = 1;
  string end_slot_id = 2;
}

message FindOptimalPathResponse {
  repeated string path_slot_ids = 1;
}

message AllocateSlotRequest {
  string material_type = 1;
  string zone = 2;
}

message AllocateSlotResponse {
  string slot_id = 1;
}
